edit js files and fixed the scrollbar in mainpage

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ body {
   overflow-x: auto;
   scroll-behavior: smooth;
   height: 52vh;
+  scrollbar-width: none;
 }
 
 .product-container::-webkit-scrollbar {
